--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #e7f6ff;
+  background-color: #ebfbd6;
 }
 
 * {
@@ -34,25 +34,6 @@ header {
   }
 }
 
-// .button {
-//   background: #ffffff;
-//   border: 1px solid #f2f2f2;
-//   box-sizing: border-box;
-//   border-radius: 8px;
-//   height: 32px;
-//   width: 32px;
-//   cursor: pointer;
-// }
-
-// .greenButton {
-//   width: 245px;
-//   margin-top: 20px;
-
-// &:hover {
-//   img {
-//     transform: rotate(180deg) translateX(3px);
-//   }
-// }
 img {
   position: ralative;
   top: 1px;
@@ -110,7 +91,7 @@ img {
   position: relative;
   width: 100%;
   height: 55px;
-  background: #9dd558;
+  background: #60e3f5;
   border-radius: 18px;
   border: 0;
   color: #fff;
@@ -129,14 +110,14 @@ img {
   }
 
   &:hover {
-    background: lighten(#9dd558, 5%);
+    background: lighten(#58c4d5, 5%);
     img {
       transform: translateX(5px);
     }
   }
 
   &:active {
-    background: darken(#9dd558, 5%);
+    background: darken(#58a1d5, 5%);
   }
 
   img {
